<resources>
    <string name="app_name">hub</string>

    <!--    LoginActivity-->
    <string name="login_text_title">사내 동호회원들과\n소통을 위해 로그인해주세요.</string>
    <string name="login_hint_email">이메일</string>
    <string name="login_hint_password">비밀번호</string>
    <string name="login_cb_auto">로그인 상태 유지하기</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_find_email">이메일 찾기</string>
    <string name="login_btn_find_password">비밀번호 찾기</string>
    <string name="login_text_signup">허브가 처음이신가요?</string>
    <string name="login_btn_signup">회원가입하기</string>

    <!--    SignupActivity-->
    <string name="signup_account_text_title_email">허브 회원가입을 위해\n이메일을 입력해주세요.</string>
    <string name="signup_account_hint_email">이메일</string>
    <string name="signup_account_text_title_password">비밀번호를\n입력해주세요.</string>
    <string name="signup_account_hint_password">비밀번호</string>
    <string name="signup_account_text_title_re_password">비밀번호 확인을 위해\n재입력해주세요.</string>
    <string name="signup_account_hint_re_password">비밀번호 재입력</string>
    <string name="signup_account_btn_next">다음</string>

    <string name="signup_privacy_text_title_info">허브에서 활동할\n나의 정보를 입력해주세요.</string>
    <string name="signup_privacy_hint_name">이름</string>
    <string name="signup_privacy_hint_phone">전화번호 (선택)</string>
    <string name="signup_privacy_btn_next">가입하기</string>

    <string name="signup_btsheet_agree_all">전체동의</string>
    <string name="signup_btsheet_agree_title">\"허브\" 서비스 동의</string>
    <string name="signup_btsheet_agree_1">[필수] 서비스 이용약관</string>
    <string name="signup_btsheet_agree_2">[필수] 개인정보 수집・이용 동의</string>
    <string name="signup_btsheet_agree_3">[선택] 마케팅 정보 수신 동의</string>
    <string name="signup_btsheet_agree_4">[필수] 만 14세 이상입니다.</string>
    <string name="signup_btsheet_agree_show">보기</string>
    <string name="signup_btsheet_agree_btn">동의하기</string>

    <string name="signup_success_title">%1$s님,\n가입을 축하합니다.</string>
    <string name="signup_success_guide">로그인을 위해\n이메일 인증을 해주세요.</string>
    <string name="signup_success_btn">로그인으로 이동하기</string>


    <!--    SelectAuthActivity-->
    <string name="auth_text_title">허브를 통해\n어떤 활동을 위해 가입하나요?</string>
    <string name="auth_text_title_employee">직원</string>
    <string name="auth_text_description_employee">회사에 합류해 동호회 활동을 원해요.</string>
    <string name="auth_text_title_manager">관리자</string>
    <string name="auth_text_description_manager">회사 생성 및 관리를 하길 원해요.</string>


    <!--    CreateCompanyActivity-->
    <string name="create_company_title_name">관리할 회사를 생성해주세요.</string>
    <string name="create_company_hint_name">회사명</string>
    <string name="create_company_btn_next_name">생성하기</string>
    <string name="create_company_title_team">직원들을 위해\n팀명을 등록해주세요.</string>
    <string name="create_company_hint_team">팀명(회사내 팀)</string>
    <string name="create_company_btn_add_team">등록</string>
    <string name="create_company_btn_next_team">등록하기</string>
    <string name="create_company_btn_next_team_n">%1$s개 팀 등록하기</string>

    <!--    JoinCompanyActivity-->
    <string name="join_company_title_code">관리자에게 받은\n 회사코드를 입력해주세요.</string>
    <string name="join_company_hint_code">회사코드</string>
    <string name="join_company_btn_next_code">확인</string>
    <string name="join_company_title_organization">\"%1$s\"에서\n소속팀과 동호회를 선택해주세요.</string>
    <string name="join_company_hint_organization_team">소속팀</string>
    <string name="join_company_hint_organization_club">동호회</string>
    <string name="join_company_btn_next_organization">다음</string>
    <string name="join_company_title_image">활동을 위해 프로필 사진을\n등록해주세요.</string>
    <string name="join_company_btn_next_image">시작하기</string>

    <!--    HomeActivity-->
    <string name="home_bottom_nav_menu_feed">홈</string>
    <string name="home_bottom_nav_menu_club">동호회</string>
    <string name="home_bottom_nav_menu_my_club">내 동호회</string>
    <string name="home_bottom_nav_menu_my_info">내 정보</string>

    <!--    FeedFragment-->
    <string name="feed_text_app_bar">HUB</string>
    <string name="feed_text_notice_add">첫 게시물을\n등록해보세요.</string>
    <string name="feed_text_empty">등록된 게시글이\n없습니다.</string>

    <!--    feed_item-->
    <string name="post_type_board">게시물</string>
    <string name="post_type_example">블라블라</string>
    <string name="feed_item_hour">%1$s 전</string>

    <string name="feed_image_divider">/</string>

    <string name="feed_item_tagged_title">언급됨</string>
    <string name="feed_item_tagged_count">\@%1$d명이 언급됨</string>
    <string name="feed_item_favorite_title">좋아요</string>
    <string name="feed_item_favorite_count">%1$d개의 좋아요</string>
    <string name="feed_item_comment_count">%1$d개의 댓글 보기</string>
    <string name="feed_item_write_comment">댓글 달기</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>