<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingBottom="40dp"
    android:paddingTop="32dp"
    android:layout_height="match_parent">

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_all"
        android:text="@string/signup_btsheet_agree_all"
        />
    
    <TextView
        android:layout_marginTop="32dp"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_btsheet_agree_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/cb_1"
            android:text="@string/signup_btsheet_agree_1"/>

        <TextView
            android:gravity="center"
            android:id="@+id/btn_show_1"
            android:layout_width="wrap_content"
            android:text="@string/signup_btsheet_agree_show"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_2"
        android:text="@string/signup_btsheet_agree_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/cb_3"
            android:text="@string/signup_btsheet_agree_1"/>

        <TextView
            android:id="@+id/btn_show_3"
            android:layout_width="wrap_content"
            android:text="@string/signup_btsheet_agree_show"
            android:gravity="center"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_4"
        android:text="@string/signup_btsheet_agree_4" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:text="@string/signup_btsheet_agree_btn"
        android:layout_height="wrap_content"/>
</LinearLayout>