<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.step.SignupAccountFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:maxWidth="480dp"
            android:paddingVertical="40dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="16dp"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_account_text_title_email"
                android:theme="@style/Text.Title"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/signup_account_hint_re_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/signup_account_hint_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/signup_account_hint_email" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/btn_next"
            android:layout_marginBottom="40dp"
            android:layout_width="480dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_account_btn_next" />

    </RelativeLayout>
</layout>